<resources>
    <string name="app_name" translatable="false">iHealth</string>
    <string name="select_language">Select language</string>
    <string name="i_agree_to_your_terms_and_conditions">I agree to your terms and conditions</string>
    <string name="medical_supplements">Medical Supplements</string>
    <string name="looking_for_supplements">Looking for supplements</string>
    <string name="my_cart">My cart</string>
    <string name="ta_dori_bor">   supplements</string>
    <string name="price"> Price</string>
    <string name="delivery"> Delivery</string>
    <string name="total_sum"> Total sum</string>
    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>Uzbek</item>
    </string-array>
</resources>